# sparse_transformers

./: .cursorrules  .gitignore  CONTRIBUTING.md  README.md  environment.yml  evaluate.py  export_llama_like_nanogpt.py  generate_dataset.py  main.py  measure_component_timing.py  measure_contextual_sparsity.py  pyproject.toml  requirements.txt  run_benchmark.py  setup.py  train.py  train_predictors.py  trainer.ipynb  trainer_notebook.py  weight_cache_optimizations.md  whitepaper_sparse_llm_inference.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
benchmarks/llama1b/: summary.json
benchmarks/llama3b/: summary.json
configs/: base.yml  deepseek_r1_distill_qwen_skip_1.5b.json  llama_skip_causal.json  llama_skip_causal_1b.json  llama_skip_causal_1b_predictor_training.json  llama_skip_causal_3b.json  llama_skip_causal_3b_predictor_training.json  mistral_skip_causal_7b.json  phi3_skip_causal_3.8b.json  qwen2_skip_causal_1.5b.json
csrc/: sparse_mlp_cuda.cu  sparse_mlp_op.cpp
llama-skip-connection/: config.json
sparse_mlp/: __init__.py
sparse_mlp/csrc/: sparse_mlp_cuda.cu  sparse_mlp_op.cpp  timer.h  weight_cache.h  weight_cache_optimized.h
sparse_transformers/: CMakeLists.txt  __init__.py
sparse_transformers/csrc/: .clang-format  approx_topk.h  sparse_mlp_cuda.cu  sparse_mlp_op.cpp  weight_cache.h
src/: __init__.py  activation_capture.py  configuration_skip.py  modeling_skip.py  modeling_utils.py  predictor_loss.py  trainer.py
src/models/: __init__.py  configuration_llama_skip.py  modelling_llama_skip.py
src/models/dia/: __init__.py  modelliing_dia_skip.py
src/models/llama/: __init__.py  (+2 more)
src/ops/: sparse_mlp.py
src/utilities/: __init__.py  cuda_utils.py  logger.py  random.py  registry.py  saver.py  sys_utils.py
(+10 files in other folders)
