[build-system]
requires = ["setuptools>=64", "wheel", "torch"]
build-backend = "setuptools.build_meta"

[project]
name = "sparse_mlp"
version = "0.0.1"
description = "Sparse MLP operations for transformers"
authors = [
    {name = "Your Name"}
]
requires-python = ">=3.7"

[tool.setuptools]
packages = ["sparse_mlp"] 