[build-system]
requires = ["setuptools>=64", "wheel", "torch"]
build-backend = "setuptools.build_meta"

[project]
name = "sparse_transformers"
version = "0.0.1"
description = "Sparse Inference for transformers"
authors = [
    {name = "NimbleEdge"}
]
requires-python = ">=3.7"

[tool.setuptools]
packages = ["sparse_transformers"] 